feat: fix model
